2002-04-11  Morten Welinder  <terra@diku.dk>

	* src/parser.y (gnumeric_parse_error): Plug leak.

	* src/item-edit.c (item_edit_destroy): Fix memory corruption on
	double destroys.

2002-04-10  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/sheet-object-graphic.c (sheet_object_filled_user_config) : don't
	  use GnomeDialog. Use Glade.
	(cb_dialog_filled_config_destroy) : replaces cb_dialog_filled_close
	(cb_dialog_filled_config_apply_clicked) : replaces cb_dialog_filled_clicked
	(cb_dialog_filled_config_ok_clicked) : new
	(cb_dialog_filled_config_cancel_clicked) : new

2002-04-10  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/sheet-object-graphic.c (sheet_object_graphic_user_config) : add line 
	  preview

2002-04-10  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/sheet-object-graphic.c (sheet_object_graphic_user_config) : don't
	  use GnomeDialog. Use Glade.
	(cb_dialog_graphic_config_destroy) : replaces cb_dialog_graphic_close
	(cb_dialog_graphic_config_apply_clicked) : replaces cb_dialog_graphic_clicked
	(cb_dialog_graphic_config_ok_clicked) : new
	(cb_dialog_graphic_config_cancel_clicked) : new
	(cb_adjustment_value_changed) : use changed DialogGraphicData

2002-04-10  Morten Welinder  <terra@diku.dk>

	* src/clipboard.c (paste_cell_with_operation): Plug leak.
	(paste_link): Ditto.

2002-04-10  Morten Welinder  <terra@diku.dk>

	* src/parse-util.c (cellref_a1_get): Fix toupper usage.  Make this
 	work for non-English.  Check for overflow in row number.

2002-04-10  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* sheet-object-widget.c (cb_checkbox_config_ok_clicked) : plug
 	expr leak
	(cb_scrollbar_config_ok_clicked) : plug expr leak

2002-04-10  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* sheet-object-widget.c (cb_checkbox_config_cancel_clicked) : new
	(cb_checkbox_config_ok_clicked) replaces cb_scrollbar_config_clicked
	(sheet_widget_checkbox_user_config) : don't use GnomeDialog

2002-04-09  Morten Welinder  <terra@diku.dk>
