@@ -640,6 +640,7 @@ doc/sv/Makefile
 omf-install/Makefile
 plugins/Makefile
 plugins/numtheory/Makefile
+plugins/fn-eng/Makefile
 plugins/derivatives/Makefile
 plugins/sc/Makefile
 plugins/sylk/Makefile
