@@ -52,7 +52,7 @@ SUBDIRS_FILE_FORMATS = $(EXCEL_DIR) lotus-123 oleo sc sylk xbase html dif plan-p
 	xml_sax applix mps $(GNOME_GLOSSARY_DIR) $(PSICONV_DIR)
 
 SUBDIRS_FUNCTIONS = $(PYTHON_DIR) $(PERL_DIR) $(GUILE_DIR) $(GB_DIR) \
-	numtheory derivatives $(GDA_DIR) $(PYFUNC_DIR)
+	numtheory fn-eng derivatives $(GDA_DIR) $(PYFUNC_DIR)
 
 SUBDIRS_LOADERS = $(PYTHON_LOADER_DIR)
 
