@@ -1,0 +1,57 @@
+<?xml version="1.0"?>
+<plugin id="Gnumeric_fneng">
+	<information>
+		<_name>Engineering Functions</_name>
+		<_description>Functions for complex numbers, base conversions, and more</_description>
+	</information>
+	<loader type="g_module">
+		<attribute name="module_file" value="plugin.la"/>
+	</loader>
+	<services>
+		<service type="function_group" id="engineering">
+			<_category>Engineering</_category>
+			<functions>
+				<function name="besseli"/>
+				<function name="besselk"/>
+				<function name="besselj"/>
+				<function name="bessely"/>
+				<function name="bin2dec"/>
+				<function name="bin2hex"/>
+				<function name="bin2oct"/>
+				<function name="complex"/>
+				<function name="convert"/>
+				<function name="dec2bin"/>
+				<function name="dec2oct"/>
+				<function name="dec2hex"/>
+				<function name="delta"/>
+				<function name="erf"/>
+				<function name="erfc"/>
+				<function name="gestep"/>
+				<function name="hex2bin"/>
+				<function name="hex2dec"/>
+				<function name="hex2oct"/>
+				<function name="imabs"/>
+				<function name="imaginary"/>
+				<function name="imargument"/>
+				<function name="imconjugate"/>
+				<function name="imcos"/>
+				<function name="imtan"/>
+				<function name="imdiv"/>
+				<function name="imexp"/>
+				<function name="imln"/>
+				<function name="imlog10"/>
+				<function name="imlog2"/>
+				<function name="impower"/>
+				<function name="improduct"/>
+				<function name="imreal"/>
+				<function name="imsin"/>
+				<function name="imsqrt"/>
+				<function name="imsub"/>
+				<function name="imsum"/>
+				<function name="oct2bin"/>
+				<function name="oct2dec"/>
+				<function name="oct2hex"/>
+			</functions>
+		</service>
+	</services>
+</plugin>
