@@ -41,7 +41,6 @@ extern void date_functions_init        (void);
 extern void string_functions_init      (void);
 extern void stat_functions_init        (void);
 extern void finance_functions_init     (void);
-extern void eng_functions_init         (void);
 extern void lookup_functions_init      (void);
 extern void logical_functions_init     (void);
 extern void database_functions_init    (void);
@@ -58,7 +57,6 @@ functions_init (void)
 	string_functions_init ();
 	stat_functions_init ();
 	finance_functions_init ();
-	eng_functions_init ();
 	lookup_functions_init ();
 	logical_functions_init ();
 	database_functions_init ();
