@@ -7,10 +7,9 @@ INCLUDES = 						\
 
 noinst_LIBRARIES = libfunctions.a
 
-libfunctions_a_SOURCES =				\
+libfunctions_a_SOURCES =			\
 	fn-database.c				\
 	fn-date.c				\
-	fn-eng.c				\
 	fn-financial.c				\
 	fn-information.c			\
 	fn-logical.c				\
